# subtitle-generator

./: .gitignore  Cargo.toml  README.md  build.rs  kur.bat
agent-logs/: Task1-Rust-Altyazi-Uretici.md
src/: main.rs
