[package]
name = "subtitle-generator"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "subtitle-generator"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
rfd = "0.15"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
